# golf

./: .dockerignore  .env  .gitignore  .gitmodules  README.md  compose.development.yml  compose.production.yml  compose.yml  docker-compose.yml  kube.production.yml  nginx.conf  server.Dockerfile
.github/workflows/: deploy.yaml  deploy.yml
k8s/: deployment.yaml  ingress.yaml  service.yaml
nginx/: Dockerfile  nginx.conf
nginx/ssl/: nginx.crt  nginx.key
server/: Cargo.toml  Dockerfile  build.rs
server/backend/: Cargo.toml  build.rs
server/backend/src/: api.rs  main.rs  route.rs  server.rs  state.rs  static.rs
server/backend/src/model/: congeries.rs  repo.rs
server/backend/src/service/: github.rs
server/backend/src/template/: about.rs  congeries.rs  error.rs  feed.rs  home.rs  mod.rs
server/backend/static/css/: about.css  base.css  congeries.css  feed.css  fonts.css  home.css  pagination.css
server/backend/static/js/: .gitignore
server/backend/templates/: 404.html  about.html  base.html  congeries.html  feed.html  feed_content.html  home.html
server/config/: feed.json  github.json
server/frontend/src/: feed.ts  pagination.ts
server/src/: main.rs  route.rs  server.rs  static.rs  template.rs
server/src/data/: cv.rs  home.rs  mod.rs
server/src/model/: cv.rs  home.rs  mod.rs  repo.rs
server/src/service/: github.rs
server/src/template/: cv.rs  home.rs  mod.rs
server/static/: 404.css  base.css  cv.css  home.css
server/static/css/: base.css  cv.css  home.css
server/static/js/: cv.js
server/templates/: 404.html  base.html  congeries.html  cv.html  home.html
src/: main.rs  route.rs
static/: 404.css  base.css  main.js
templates/: 404.html  base.html  home.html
