[package]
name = "golf_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# networking
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
tower-http = { version = "0.6.2", features = ["fs"] }
# templates
askama = "0.12.1"
# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log-panics = "2.1.0"
# util
anyhow = "1.0.95"
mime_guess = "2.0.5"

[build-dependencies]
sha2 = "0.10.8"
include_dir = "0.7.4"
