[package]
name = "golf_server"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
# networking
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
tower-http = { version = "0.6.2", features = ["fs", "set-header", "compression-br", "compression-gzip"] }
tower-layer = "0.3.3"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5.7"
# templates
askama = "0.12.1"
# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log-panics = "2.1.0"
# util
serde = { version = "1.0.225", features = ["derive"] }
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.95"
thiserror = "2.0.16"

[build-dependencies]
brotli = "7.0.0"
flate2 = "1.1.1"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"
